--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 @font-face
 	{font-family:"Gill Sans";
 	panose-1:2 11 5 2 2 1 4 2 2 3;}
+@font-face
+	{font-family:Garamond;
+	panose-1:2 2 4 4 3 3 1 1 8 3;}
  /* Style Definitions */
 p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{margin:0in;
@@ -183,58 +186,56 @@ ul
   <td width=86 valign=top style='width:86.05pt;border:none;border-right:solid #D9D9D9 3.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
   <p style='margin:0in;margin-bottom:.0001pt'><b><i><span style='font-family:
-  "Gill Sans"'><img width=78 height=78 id="Picture 1"
-  src="index.fld/image001.gif"></span></i></b></p>
+  Garamond'><img width=78 height=78 id="Picture 1" src="index.fld/image001.gif"></span></i></b></p>
   </td>
   <td width=189 valign=top style='width:189.0pt;border:none;border-right:solid #D9D9D9 3.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
-  <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:"Gill Sans"'>SATRAJIT
-  SUJIT GHOSH</span><span style='font-family:"Gill Sans"'>, PhD</span></p>
-  <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:"Gill Sans"'>satra@mit.edu</span></p>
-  <p style='margin:0in;margin-bottom:.0001pt'><b><a
-  href="http://satra.cogitatum.org/"><span style='font-family:"Gill Sans";
-  font-weight:normal'>http://satra.cogitatum.org</span></a></b><span
-  style='font-family:"Gill Sans"'> </span></p>
-  <p class=MsoNormal><b><a
+  <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:Garamond'>SATRAJIT
+  SUJIT GHOSH</span><span style='font-family:Garamond'>, PhD</span></p>
+  <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:Garamond'>satra@mit.edu</span></p>
+  <p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:Garamond'><a
+  href="http://satra.cogitatum.org/"><span style='font-weight:normal'>http://satra.cogitatum.org</span></a></span></b><span
+  style='font-family:Garamond'> </span></p>
+  <p class=MsoNormal><b><span style='font-family:Garamond'><a
   href="http://satra.cogitatum.org/assets/CV_Latest.pdf"><span
-  style='font-family:"Gill Sans";color:purple;font-weight:normal'>Download CV</span></a></b><span
-  style='font-family:"Gill Sans";color:black'>&nbsp;|&nbsp;</span><b><a
-  href="https://github.com/satra"><span style='font-family:"Gill Sans";
-  color:purple;font-weight:normal'>Github Repos</span></a></b></p>
+  style='color:purple;font-weight:normal'>Download CV</span></a></span></b><span
+  style='font-family:Garamond;color:black'>&nbsp;|&nbsp;</span><b><span
+  style='font-family:Garamond'><a href="https://github.com/satra"><span
+  style='color:purple;font-weight:normal'>Github Repos</span></a></span></b></p>
   </td>
   <td width=240 valign=top style='width:239.75pt;border:none;padding:0in 5.4pt 0in 5.4pt'>
-  <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:"Gill Sans"'>McGovern
+  <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:Garamond'>McGovern
   Institute for Brain Research</span></p>
   <p style='margin-top:0in;margin-right:-5.75pt;margin-bottom:0in;margin-left:
-  0in;margin-bottom:.0001pt'><span style='font-family:"Gill Sans"'>Massachusetts
+  0in;margin-bottom:.0001pt'><span style='font-family:Garamond'>Massachusetts
   Institute of Technology</span></p>
-  <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:"Gill Sans"'>43
+  <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:Garamond'>43
   Vassar St, 46-4033F,</span></p>
-  <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:"Gill Sans"'>Cambridge,
+  <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:Garamond'>Cambridge,
   MA 02139, USA</span></p>
   </td>
  </tr>
 </table>
 
-<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Gill Sans"'>&nbsp;</span></b></p>
+<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:Garamond'>&nbsp;</span></b></p>
 
-<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Gill Sans"'>&nbsp;</span></b></p>
+<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:Garamond'>&nbsp;</span></b></p>
 
 </div>
 
-<b><span style='font-size:12.0pt;font-family:"Gill Sans"'><br clear=all
+<b><span style='font-size:12.0pt;font-family:Garamond'><br clear=all
 style='page-break-before:auto'>
 </span></b>
 
 <div class=WordSection2>
 
-<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Gill Sans"'>&nbsp;</span></b></p>
+<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:Garamond'>&nbsp;</span></b></p>
 
-<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Gill Sans"'>Profile</span></b></p>
+<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:Garamond'>Profile</span></b></p>
 
-<p class=MsoNormal><span style='font-family:"Gill Sans";color:black'>My
-research interests span computer science and neuroimaging, specifically in the
-areas of applied machine learning, software engineering, and applications of
+<p class=MsoNormal><span style='font-family:Garamond;color:black'>My research
+interests span computer science and neuroimaging, specifically in the areas of
+applied machine learning, software engineering, and applications of
 neuroimaging. The primary focus of my research group is to develop knowledge
 discovery platforms by integrating a set of multidisciplinary projects that
 span precision medicine in mental health, imaging genetics, machine learning,
@@ -245,83 +246,83 @@ the Nipype dataflow platform, an ardent proponent of decentralized and
 distributed Web solutions for data sharing, querying, and computing, and a
 strong believer in solving problems together.</span></p>
 
-<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Gill Sans"'>&nbsp;</span></b></p>
+<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:Garamond'>&nbsp;</span></b></p>
 
-<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Gill Sans"'>Education</span></b></p>
+<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:Garamond'>Education</span></b></p>
 
 <p class=H2 style='margin:0in;margin-bottom:.0001pt'><span style='font-family:
-"Gill Sans";font-weight:normal'>PhD, Cognitive and Neural Systems, Boston
+Garamond;font-weight:normal'>PhD, Cognitive and Neural Systems, Boston
 University, 2005, Prof. Frank Guenther</span></p>
 
 <p class=H2 style='margin:0in;margin-bottom:.0001pt'><span style='font-family:
-"Gill Sans";font-weight:normal'>B.S. (Honors), Computer Science, National
+Garamond;font-weight:normal'>B.S. (Honors), Computer Science, National
 University of Singapore, 1997, Prof. Lonce L. Wyse</span></p>
 
 <p class=H2 style='margin:0in;margin-bottom:.0001pt'><span style='font-family:
-"Gill Sans"'>&nbsp;</span></p>
+Garamond'>&nbsp;</span></p>
 
 <p class=H2 style='margin:0in;margin-bottom:.0001pt'><span style='font-family:
-"Gill Sans"'>Professional Appointments</span></p>
+Garamond'>Professional Appointments</span></p>
 
 <table class=MsoTable15Plain4 border=0 cellspacing=0 cellpadding=0
  style='border-collapse:collapse'>
  <tr>
   <td width=428 valign=top style='width:428.0pt;padding:0in 5.4pt 0in 5.4pt'>
   <p class=H2 style='margin:0in;margin-bottom:.0001pt'><span style='font-family:
-  "Gill Sans";font-weight:normal'>Principal Research Scientist, McGovern Institute
+  Garamond;font-weight:normal'>Principal Research Scientist, McGovern Institute
   for Brain Research, MIT</span></p>
   </td>
   <td width=87 rowspan=2 valign=top style='width:86.8pt;padding:0in 5.4pt 0in 5.4pt'>
   <p class=H2 style='margin:0in;margin-bottom:.0001pt'><span style='font-family:
-  "Gill Sans";font-weight:normal'><img border=0 width=39 height=22
-  id="Picture 2" src="index.fld/image002.gif">&nbsp;<img border=0 width=18
-  height=22 id="Picture 3" src="index.fld/image003.gif"></span></p>
+  Garamond;font-weight:normal'><img border=0 width=39 height=22 id="Picture 2"
+  src="index.fld/image002.gif">&nbsp;<img border=0 width=18 height=22
+  id="Picture 3" src="index.fld/image003.gif"></span></p>
   </td>
  </tr>
  <tr>
   <td width=428 valign=top style='width:428.0pt;padding:0in 5.4pt 0in 5.4pt'>
   <p class=H2 style='margin:0in;margin-bottom:.0001pt'><span style='font-family:
-  "Gill Sans";font-weight:normal'>Assistant Professor, Department of
+  Garamond;font-weight:normal'>Assistant Professor, Department of
   Otolaryngology, Harvard Medical School</span></p>
   </td>
  </tr>
  <tr>
   <td width=428 valign=top style='width:428.0pt;padding:0in 5.4pt 0in 5.4pt'>
   <p class=H2 style='margin:0in;margin-bottom:.0001pt'><span style='font-family:
-  "Gill Sans";font-weight:normal'>Associate Editor, Frontiers in Brain Imaging
+  Garamond;font-weight:normal'>Associate Editor, Frontiers in Brain Imaging
   Methods, Human Neuroscience, Neuroinformatics</span></p>
   </td>
   <td width=87 valign=top style='width:86.8pt;padding:0in 5.4pt 0in 5.4pt'>
   <p class=H2 style='margin:0in;margin-bottom:.0001pt'><span style='font-family:
-  "Gill Sans";font-weight:normal'>&nbsp;</span></p>
+  Garamond;font-weight:normal'>&nbsp;</span></p>
   </td>
  </tr>
 </table>
 
-<p class=MsoNormal><span style='font-family:"Gill Sans"'>&nbsp;</span></p>
+<p class=MsoNormal><span style='font-family:Garamond'>&nbsp;</span></p>
 
-<p class=MsoNormal><b><span style='font-family:"Gill Sans"'>Selected Publications</span></b></p>
+<p class=MsoNormal><b><span style='font-family:Garamond'>Selected Publications</span></b></p>
 
 <p class=MsoListParagraph style='margin-top:.1pt;margin-right:0in;margin-bottom:
 .1pt;margin-left:.25in;text-align:justify;text-indent:-.25in'><span
-style='font-family:"Gill Sans"'>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span style='font-family:"Gill Sans"'>Gorgolewski, K., Burns,
-C.D., Madison, C., Clark, D., Halchenko, Y.O., Waskom, M.L., Ghosh, S.S.
-(2011). Nipype: a flexible, lightweight and extensible neuroimaging data
-processing framework in Python.&nbsp;<i>Front. Neuroinform.</i>&nbsp;5:13.</span></p>
+style='font-family:Garamond'>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span style='font-family:Garamond'>Gorgolewski, K., Burns, C.D.,
+Madison, C., Clark, D., Halchenko, Y.O., Waskom, M.L., Ghosh, S.S. (2011).
+Nipype: a flexible, lightweight and extensible neuroimaging data processing
+framework in Python.&nbsp;<i>Front. Neuroinform.</i>&nbsp;5:13.</span></p>
 
 <p class=MsoListParagraph style='margin-left:.25in;text-indent:-.25in'><span
-style='font-family:"Gill Sans"'>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span style='font-family:"Gill Sans";color:black'>Margulies D,
-Ghosh SS, Goulas A, Falkiewicz M, Huntenburg JM, Langs G, Bezgin G, Eickhoff S,
+style='font-family:Garamond'>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span style='font-family:Garamond;color:black'>Margulies D, Ghosh
+SS, Goulas A, Falkiewicz M, Huntenburg JM, Langs G, Bezgin G, Eickhoff S,
 Castellanos FX, Petrides M, Jefferies E, Smallwood J (2016). Situating the
 default-mode network in a principal gradient of macroscale cortical
 organization. Proceedings of National Academy of Sciences.</span></p>
 
 <p class=MsoListParagraph style='margin-top:.1pt;margin-right:0in;margin-bottom:
 .1pt;margin-left:.25in;text-align:justify;text-indent:-.25in'><span
-style='font-family:"Gill Sans"'>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span style='font-family:"Gill Sans"'>* Doehrmann, O., * Ghosh,
+style='font-family:Garamond'>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span style='font-family:Garamond'>* Doehrmann, O., * Ghosh,
 S.S., Polli, F.P., Reynolds, G., Horn, F., Keshavan, A., Whitfield-Gabrieli,
 S., Hofmann, S.G., Pollack, M., Gabrieli, J.D. (2013) Predicting treatment
 response in social anxiety disorder from functional magnetic resonance imaging.
@@ -329,87 +330,86 @@ response in social anxiety disorder from functional magnetic resonance imaging.
 
 <p class=MsoNormal style='margin-top:.1pt;margin-right:0in;margin-bottom:.1pt;
 margin-left:.25in;text-align:justify;text-indent:-.25in'><span
-style='font-family:"Gill Sans"'>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span style='font-family:"Gill Sans"'>Gabrieli, J.D.E., Ghosh, S.S.,
+style='font-family:Garamond'>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span style='font-family:Garamond'>Gabrieli, J.D.E., Ghosh, S.S.,
 Whitfield-Gabrieli, S. (2015). Prediction as a Humanitarian and Pragmatic
 Contribution from Human Cognitive Neuroscience. <i>Neuron.</i></span></p>
 
 <p class=MsoNormal style='margin-top:.1pt;margin-right:0in;margin-bottom:.1pt;
 margin-left:.25in;text-align:justify;text-indent:-.25in'><span
-style='font-family:"Gill Sans"'>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span style='font-family:"Gill Sans"'>Whitfield-Gabrieli, S.,
-Ghosh, S.S., Nieto-Castanon, A., Saygin, Z., Doehrmann, O., Chai, X.J.,
-Reynolds, G.O., Hofmann, S.G., Pollack, M.H., Gabrieli, J.D. (2015) Brain
-connectomics predict response to treatment in social anxiety disorder. <i>Molecular
-Psychiatry.</i></span></p>
+style='font-family:Garamond'>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span style='font-family:Garamond'>Whitfield-Gabrieli, S., Ghosh,
+S.S., Nieto-Castanon, A., Saygin, Z., Doehrmann, O., Chai, X.J., Reynolds, G.O.,
+Hofmann, S.G., Pollack, M.H., Gabrieli, J.D. (2015) Brain connectomics predict
+response to treatment in social anxiety disorder. <i>Molecular Psychiatry.</i></span></p>
 
 <p class=MsoNormal style='margin-top:.1pt;margin-right:0in;margin-bottom:.1pt;
-margin-left:.25in'><span style='font-family:"Gill Sans"'>&nbsp;</span></p>
+margin-left:.25in'><span style='font-family:Garamond'>&nbsp;</span></p>
 
 <table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 width=514
  style='width:513.5pt;border-collapse:collapse;border:none'>
  <tr>
   <td width=289 valign=top style='width:288.5pt;border:none;border-right:solid #D9D9D9 3.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
-  <p class=MsoNormal><b><span style='font-family:"Gill Sans"'>Technological
+  <p class=MsoNormal><b><span style='font-family:Garamond'>Technological
   Innovations</span></b></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
   style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
-  </span></span><span style='font-family:"Gill Sans"'>Nipype: Dataflows for
+  </span></span><span style='font-family:Garamond'>Nipype: Dataflows for
   reproducible biomedical research</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
   style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
-  </span></span><span style='font-family:"Gill Sans"'>VoiceUp: Mobile health
-  voice and data collection</span></p>
+  </span></span><span style='font-family:Garamond'>VoiceUp: Mobile health voice
+  and data collection</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
   style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
-  </span></span><span style='font-family:"Gill Sans"'>MURFI: A realtime
-  software for fMRI-based biofeedback</span></p>
+  </span></span><span style='font-family:Garamond'>MURFI: A realtime software
+  for fMRI-based biofeedback</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
   style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
-  </span></span><span style='font-family:"Gill Sans"'>Audapter: Realtime vocal
+  </span></span><span style='font-family:Garamond'>Audapter: Realtime vocal
   modification</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
   style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
-  </span></span><span style='font-family:"Gill Sans"'>MRCancel: MRI
-  communication noise suppression </span></p>
+  </span></span><span style='font-family:Garamond'>MRCancel: MRI communication
+  noise suppression </span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
   style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
-  </span></span><span style='font-family:"Gill Sans"'>Carotid artery diameter estimates
+  </span></span><span style='font-family:Garamond'>Carotid artery diameter estimates
   from ultrasound</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
   style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
-  </span></span><span style='font-family:"Gill Sans"'>FlexEffex: Interactive
-  sound effects and music</span></p>
+  </span></span><span style='font-family:Garamond'>FlexEffex: Interactive sound
+  effects and music</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
   style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
-  </span></span><span style='font-family:"Gill Sans"'>Contributions to
-  opensource projects</span></p>
+  </span></span><span style='font-family:Garamond'>Contributions to opensource
+  projects</span></p>
   </td>
   <td width=225 valign=top style='width:225.0pt;border:none;padding:0in 5.4pt 0in 5.4pt'>
-  <p class=MsoNormal><b><span style='font-family:"Gill Sans"'>Selected NIH Research
+  <p class=MsoNormal><b><span style='font-family:Garamond'>Selected NIH Research
   Grants</span></b></p>
   <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:8.3pt;
   margin-bottom:.0001pt;text-indent:-9.0pt'><span style='font-family:"Gill Sans";
   color:black'>&gt;<span style='font:7.0pt "Times New Roman"'> </span></span><span
-  style='font-family:"Gill Sans";color:black'>R01 - Nipype: Dataflows for
+  style='font-family:Garamond;color:black'>R01 - Nipype: Dataflows for
   Reproducible Biomedical Research (Principal Investigator)</span></p>
   <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:8.3pt;
   margin-bottom:.0001pt;text-indent:-9.0pt'><span style='font-family:"Gill Sans";
   color:black'>&gt;<span style='font:7.0pt "Times New Roman"'> </span></span><span
-  style='font-family:"Gill Sans";color:black'>U01 - Connectomes related to anxiety
+  style='font-family:Garamond;color:black'>U01 - Connectomes related to anxiety
   and depression in adolescents. (Project coordinator and informatics lead)</span></p>
   <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:8.3pt;
   margin-bottom:.0001pt;text-indent:-9.0pt'><span style='font-family:"Gill Sans";
   color:black'>&gt;<span style='font:7.0pt "Times New Roman"'> </span></span><span
-  style='font-family:"Gill Sans";color:black'>R01 supplement - Genetic
+  style='font-family:Garamond;color:black'>R01 supplement - Genetic
   Determinants of Schizophrenia Intermediate Phenotypes (Subaward principal
   investigator)</span></p>
   </td>
  </tr>
 </table>
 
-<p class=MsoNormal><span style='font-family:"Gill Sans"'>&nbsp;</span></p>
+<p class=MsoNormal><span style='font-family:Garamond'>&nbsp;</span></p>
 
 </div>
 
